# salesflow-data-pipeline

./: .env.example  .gitignore  README.md  adf_pipeline_creator.py  azure_blob_upload.py  download_dataset.sh  init_azure_blob_upload.sh  init_snowflake_db.py  logger.py  main.py  pyproject.toml  requirements.txt  upload_dataset_to_blob.py
dashboard/: snowflake_conn.py  utils.py
db/: sales_records.dbml  sales_records.sql  schema.sql
db_schema/: normalized_schema.dbml  normalized_schema.sql  raw_schema.sql
dbt_salesflow/: dbt_project.yml
dbt_salesflow/macros/: add_constraints.sql  get_custom_schema.sql  not_empty_table.sql
dbt_salesflow/models/analytics/: performance_by_channel.sql  performance_by_order_priority.sql  performance_by_region.sql  product_performance.sql  revenue_by_date.sql  schema.yml
dbt_salesflow/models/normalized/: country.sql  order_priority.sql  orders.sql  product.sql  region.sql  schema.yml
dbt_salesflow/models/raw/: raw_sales_data_clean.sql  sources.yml
dbt_salesflow/tests/analytics/: assert_channel_revenue_sum_equals_total.sql  assert_no_negative_ship_times.sql  assert_online_offline_channel_exists.sql  assert_profit_correctly_calculated.sql  assert_region_country_counts_match.sql
dbt_salesflow/tests/normalized/: assert_all_regions_have_countries.sql  assert_incremental_model_correctness.sql  assert_no_future_ship_dates.sql  assert_orders_price_margin.sql
dbt_salesflow/tests/raw/: assert_raw_data_deduplicated.sql
scripts/: adf_pipeline_creator.py  azure_blob_upload.py  init_snowflake_db.py
src/salesflow_data_pipeline/: main.py
src/salesflow_data_pipeline/adf/: datasets.py  deployment.py  linked_services.py
src/salesflow_data_pipeline/scripts/: adf_pipeline_creator.py  adf_pipeline_creator_draft.py  azure_blob_upload.py
src/salesflow_data_pipeline/utils/: config.py
tests/: test_adf_pipeline_creator.py  test_azure_blob_upload.py  test_init_snowflake_db.py
utils/: azure.py  config.py  logger.py
